Fixed issue where description paragraph would wrap over if too long
I basically had to manually calculate the width using calc() - See the commit changes for details

--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,12 @@
     #nameDescriptContainer
     {
         padding-left: 10px;
+        width: calc(100% - 220px);
+    }
+    
+    #pokemonDescription
+    {
+        overflow: auto;
     }
 }
 
@@ -89,7 +95,6 @@
     {
         width: 80%;
     }
-
 }
 
 /* Medium Devices, Desktops */
